restructured, etc.